.happypack/s--524392365
SyntaxError: `getDirectThreats` has already been exported. Exported identifiers must be unique. (147:0)

[0m [90m 145 | [39m[90m//Get taxonrecordname[39m
 [90m 146 | [39m
[31m[1m>[22m[39m[90m 147 | [39m[36mexport[39m [36mfunction[39m getDirectThreats(id) {
 [90m     | [39m[31m[1m^[22m[39m
 [90m 148 | [39m
 [90m 149 | [39m  [36mreturn[39m fetch([32m`${Const.server.amazon}/fichas/${id}/taxon_record_name/1`[39m[33m,[39m http([32m'GET'[39m))[33m.[39mthen((response) [33m=>[39m {
 [90m 150 | [39m    [36mreturn[39m response[33m.[39mjson()[0m

BabelLoaderError: SyntaxError: `getDirectThreats` has already been exported. Exported identifiers must be unique. (147:0)

[0m [90m 145 | [39m[90m//Get taxonrecordname[39m
 [90m 146 | [39m
[31m[1m>[22m[39m[90m 147 | [39m[36mexport[39m [36mfunction[39m getDirectThreats(id) {
 [90m     | [39m[31m[1m^[22m[39m
 [90m 148 | [39m
 [90m 149 | [39m  [36mreturn[39m fetch([32m`${Const.server.amazon}/fichas/${id}/taxon_record_name/1`[39m[33m,[39m http([32m'GET'[39m))[33m.[39mthen((response) [33m=>[39m {
 [90m 150 | [39m    [36mreturn[39m response[33m.[39mjson()[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)